kubernetes/namespace/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    name: prod

# kubectl config set-context production --namespace=prod --cluster=DEFAULT_CONTEXT_NAME --user=DEFAULT_CONTEXT_NAME
