kubernetes/namespace/prod/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prod-ingress
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
    - secretName: www-praekiko-tk-lets-encrypt-prod-tls
  hosts:
    - praekiko.tk
    - www.praekiko.tk
  rules:
    - host: www.praekiko.tk
      http:
        paths:
          - path: /*
            backend:
              serviceName: react-ssr
              servicePort: 8080
          - path: /api/*
            backend:
              serviceName: express-api
              servicePort: 8080
